[project]
name = "ciphers-cli-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Hoffmann",email = "edu.he.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "ciphers_cli_py", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
