[project]
name = "ciphers-cli-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Hoffmann",email = "edu.he.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.15.2,<0.16.0)"
]

[tool.poetry]
packages = [{include = "ciphers_cli_py", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
faker = "^37.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
